Fix: It was not possible to set a different alignment for each device when using SVG icons.

--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -70,6 +70,7 @@
 
 	.elementor-icon-list-icon {
 		display: flex;
+		text-align: var(--e-icon-list-icon-align);
 
 		svg {
 			width: $e-icon-list-svg-icon-size;
@@ -84,18 +85,11 @@
 
 	// Should be applied only on the icon-list widget, and not on any other widget that rely on this CSS.
 	&.elementor-widget-icon-list {
-		$e-icon-list-svg-icon-side-margin-size: calc(#{$e-icon-list-svg-icon-size} * 0.25);
 
 		.elementor-icon-list-icon svg {
-			margin: 0 $e-icon-list-svg-icon-side-margin-size 0 0;
-		}
+			$e-icon-list-svg-icon-margin-default-size: 0 calc(var(--e-icon-list-icon-size, 1em) * 0.25) 0 0;
 
-		&.e-align-icon-right .elementor-icon-list-icon svg {
-			margin: 0 0 0 $e-icon-list-svg-icon-side-margin-size;
-		}
-
-		&.e-align-icon-center .elementor-icon-list-icon svg {
-			margin: 0 calc(#{$e-icon-list-svg-icon-size} * 0.125);
+			margin: var(--e-icon-list-icon-margin, $e-icon-list-svg-icon-margin-default-size);
 		}
 	}
 
